Adding redis server in k8

--- a/deployment.yaml
+++ b/deployment.yaml
@@ -6,7 +6,6 @@ spec:
   selector:
     matchLabels:
       app: product-service
-  replicas: 1 # Number of replicas that will be created for this deployment
   template:
     metadata:
       labels:
@@ -17,21 +16,24 @@ spec:
           image: zohanizna/product-service:latest # Image that will be used to containers in the cluster
           imagePullPolicy: IfNotPresent
           ports:
-            - containerPort: 8080 # The port that the container is running on in the cluster
-
-
+            - containerPort: 8080
+        - name: redis
+          image: redis:latest
+          ports:
+            - containerPort: 6379  # Port for Redis
 ---
-
-
-apiVersion: v1 # Kubernetes API version
-kind: Service # Kubernetes resource kind we are creating
-metadata: # Metadata of the resource kind we are creating
+apiVersion: v1
+kind: Service
+metadata:
   name: product-service
 spec:
   selector:
     app: product-service
   ports:
     - protocol: "TCP"
-      port: 8080 # The port that the service is running on in the cluster
-      targetPort: 8080 # The port exposed by the service
-  type: NodePort # type of the service.
+      port: 8080
+      targetPort: 8080
+    - protocol: "TCP"
+      port: 6379  # Port for Redis
+      targetPort: 6379
+  type: NodePort
